src/test/ui/specialization/issue-45814.stderr
error[E0275]: overflow evaluating the requirement `T: Trait<_>`
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_45814`)
note: required for `T` to implement `Trait<_>`
  --> $DIR/issue-45814.rs:8:20
   |
LL | default impl<T, U> Trait<T> for U {}
   |                    ^^^^^^^^     ^
   = note: 128 redundant requirements hidden
   = note: required for `T` to implement `Trait<_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
